# yorumatorapp

./: .gitignore  README.md  package-lock.json
backend/: .env.example  App.js  README.md  alembic.ini  pyproject.toml  requirements.txt
backend/alembic/: env.py  script.py.mako
backend/alembic/versions/: 20251118_01_initial.py  20251119_01_add_social_features.py
backend/app/: main.py
backend/app/api/: deps.py
backend/app/api/routes/: auth.py  (+13 more)
backend/app/core/: config.py  logging.py  security.py
backend/app/crud/: category.py  comment_reply.py  favorite.py  follow.py  notification.py  product.py  question.py  review.py  review_like.py  user.py
backend/app/db/: base.py  base_class.py  session.py
backend/app/models/: __init__.py  badge.py  category.py  comment_reply.py  favorite.py  follow.py  media_asset.py  notification.py  product.py  question.py  review.py  review_like.py  user.py
backend/app/schemas/: auth.py  category.py  comment_reply.py  common.py  favorite.py  follow.py  notification.py  product.py  question.py  review.py  review_like.py  user.py
backend/app/services/: moderation.py  nlp.py
backend/scripts/: seed_data.py
backend/src/components/: FilterModal.js  RatingStars.js  SkeletonLoader.js
backend/src/config/: api.js
backend/src/context/: AuthContext.js
backend/src/screens/: CategoryMenuScreen.js  FavoritesScreen.js  LoginScreen.js  NotificationsScreen.js  ProductDetailScreen.js  ProductSubmitScreen.js  ProductsScreen.js  ProfileScreen.js  RegisterScreen.js
backend/yorumator_backend.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
(+26 files in other folders)
